--- a/index.html
+++ b/index.html
@@ -200,16 +200,30 @@
             <div id="videoModal" class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-md">
                 <div class="modal-content text-center">
-                  <div class="modal-header">
+                  <!--<div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                     <h4 class="modal-title" id="mySmallModalLabel">Watch our video:</h4>
-                  </div>
+                  </div>-->
                   <div class="modal-body ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/c3PGZuS94YU" frameborder="0" allowfullscreen class="img-responsive hidden-xs hidden-sm" style="height:315px;"></iframe>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- Small modal -->
+			<div id="myModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+			  <div class="modal-dialog modal-sm">
+			    <div class="modal-content text-center">
+			    	<h2>Keep <span>in Touch</span></h2>
+			    	<p>Sign up for our newsletter for info on new products, exclusive offers, &amp; awesome project ideas.</p>
+			    	<div class="form-group">
+    					<input type="text" class="form-control" placeholder="your email">
+					</div>
+			      <button type="button" class="btn btn-wide purple-red-bg">Sign Up</button>
+			    </div>
+			  </div>
+			</div>
 			
             <div class="row">
 				<footer data-foot></footer>
