Worked through copy deck as far as possible.

--- a/about.html
+++ b/about.html
@@ -59,17 +59,14 @@
                             
                             <div class="row">  
                                 <div class="col-md-6">
-                                    <h3>Synbiota's mission is to standardize biotechnology and make it accessible to everyone.</h3>
+                                    <h3>Our mission is to standardize biotechnology, making it accessible to everyone.</h3>
                                 </div>
                             </div>
 			                
-			                <p class="p-highlight">Synbiota is a set of rapid prototyping tools that move synthetic biology out of institutions, unversities, and large corporations, by lowering the threshold of entry for doing it and using it to solve problems.</p>
-
-			                <p>Synbiota is a software and wetware platform that offers the ability to start using the latest in synthetic biology tools to do your work faster and make it sharable.</p>
-
-			                <p>Through use of standardized DNA parts that can be rapidly assembled like LEGO blocks, you can use and assemble a growing list of standardized DNA parts and build complex genetic circuits in hours rather than weeks or months.</p>
-
-			                <p>The standardized DNA parts are complemented with a DNA design software for designing and conceptualizing your genetic circuits before you assemble them.  Synbiota's electronic lab book is host protocols and gives you the ability to log your experimental results and relate it back to the DNA you designed, assembled, and tested.</p>
+			                <p class="p-highlight">Synbiota is an integrated software and wetware platform that enables you to explore the full potential of synthetic biology.</p>
+			                <p>We're taking biotech beyond the walls of institutions, universities, and large corporations and into the public realm. Like an Arduino for living things, our growing collection of modular RDP Standardized DNA parts can be rapidly assembled into complex genetic circuits in hours instead of weeks or months.</p>
+			                <p>As an end-to-end platform, our standardized DNA parts are complemented with web-based DNA design software that helps you conceptualize your genetic circuits before you assemble them. Our electronic lab book is host to protocols and allows you to log your results as you design, assemble, test, and iterate.</p>
+			                <p>Our vision is to create a safe, open, and thriving ecosystem where synbio knowledge and innovations are created and exchanged.</p>
 
 			                <div id="social">
     			                <div class="row">
