--- a/build.html
+++ b/build.html
@@ -60,25 +60,20 @@
                     <div class="col-md-10 col-md-offset-1 text-center">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
-                                <h2 class="condensed">Push the creativity of your research by 
-                                    building standardized parts that allow you to iterate rapidly 
-                                    and reliably.</h2>
+                                <h2 class="condensed">Improve the flexibility of your experiments by building RDP Standardized parts.</h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
-                                <p>Have an RBS promoter you’d like to experiment with? <br/>
-                                A new product modifier to apply to an existing genetic circuit?</p>
+                                <p>Have an RBS promoter you’d like to experiment with?<br> A new product modifier to apply to an existing genetic circuit?</p>
                             </div>
                         </div>
         
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
-                                <p>
-                                    Apply now for BETA access to our RDP Standardization system, and 
-                                    within about a week you’ll be able to build a validated part for 
-                                    your genetic circuit. If approved for the BETA, you’ll get front-of-the-line access 
-                                    to build your own RDP Standard part at 50% off.
+                                <p>Apply now for BETA access to our RDP Standardization system, and within about a week you’ll be able to build a validated part for your genetic circuit.</p>
+                                <p>Push the creativity of your research by building standardized parts that allow you to iterate rapidly and reliably.</p>
+                                <p>If approved for the BETA, you’ll get front-of-the-line access to build your own RDP Standard part at an exclusive discount.
                                 </p>
                             </div>
                         </div>
@@ -89,7 +84,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5 col-md-offset-4">
-                            <h2>Let us know more about you:</h2>
+                            <h2>Tell us a bit about yourself</h2>
+                            <p>Do you (check all that apply):</p>
                             <form class="form-horizontal">
                                 <fieldset>
                                 <!-- Multiple Checkboxes -->
@@ -101,8 +97,7 @@
                                                     name="checkboxes" 
                                                     id="checkboxes-0" 
                                                     value="hands-on">
-                                                Doing hands-on recombinant DNA lab work is a key 
-                                                part of my job description.
+                                                do hands-on recombinant DNA lab work as a key part of your job description?
                                             </label>
                                         </div>
                                         <div class="checkbox">
@@ -111,8 +106,7 @@
                                                 name="checkboxes" 
                                                 id="checkboxes-1" 
                                                 value="novel-circuit">
-                                              I would like to create a novel genetic circuit, 
-                                              and have a specific project in mind.
+                                              want to create a novel genetic circuit and have a specific project in mind?
                                             </label>
                                         </div>
                                         <div class="checkbox">
@@ -121,8 +115,7 @@
                                                     name="checkboxes" 
                                                     id="checkboxes-2" 
                                                     value="lab-access">
-                                                I have access to a lab where I can run gel electro-phoresis, 
-                                                PCR, and bacterial transformation and mini-prep experiments.
+                                                have access to a lab where you can run gel electrophoresis, PCR, and bacterial transformation, plus mini-prep experiments?
                                             </label>
                                         </div>
                                         <div class="checkbox">
@@ -131,8 +124,7 @@
                                                     name="checkboxes" 
                                                     id="checkboxes-3" 
                                                     value="willing-to-try">
-                                                I’m willing to try designing genetic circuits using software, 
-                                                even if I have never done so before.
+                                                want to try designing genetic circuits using software, even if you’ve never done so before? 
                                             </label>
                                         </div>
                                         <div class="checkbox">
@@ -141,8 +133,7 @@
                                                     name="checkboxes" 
                                                     id="checkboxes-4" 
                                                     value="help-symbiota">
-                                                I can spend up to an hour a week helping the Synbiota team 
-                                                investigate or test drive early software concepts.
+                                                have up to an hour a week available to help the Synbiota team investigate or test drive early software concepts?
                                           </label>
                                         </div>
                                     </div>
@@ -171,7 +162,7 @@
                                 </div>
 
                                 <!-- Dropdown input-->
-                                <div class="form-group">  
+                                <!--<div class="form-group">  
                                     <div class="col-md-10">
                                         <select id="name" 
                                             name="name" 
@@ -180,7 +171,7 @@
                                             <option name="" value="">Affiliate Dropdown</option>
                                         </select>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <div class="form-group">  
                                     <div class="col-md-4">
