--- a/platform.html
+++ b/platform.html
@@ -103,11 +103,10 @@
 	                <div class="row">
 	                	<div class="col-sm-12">
 	                		<h2 class="condensed">The Synbiota Platform</h2>
-	                		<p>Synbiota is a comprehensive platform for rapid DNA prototyping. Elegantly integrating software and wetware solutions, the Synbiota ecosystem comprises a digital DNA lab, compatible biological materials for construction, and tools that enable social sharing, remote experimentation, and knowledge exchange.</p>
-
+	                		<p>Synbiota is a comprehensive platform for rapid DNA prototyping. Elegantly integrating software and wetware solutions, the Synbiota ecosystem is comprised of a digital DNA lab, compatible biological materials for construction, and tools that enable social sharing, remote experimentation, and knowledge exchange.</p>
 	                		<p>Complex genetic circuits designed on Synbiota’s browser-based digital lab can provide automated instructions for physical assembly using standardized DNA parts that link together with Lego-like intuitiveness. These DNA programs are then booted up in an organism for observation and validation. Protocols and experiments are logged in the online lab book where they may be securely stored and referenced for further iterations, or shared openly for distributed experimentation.</p>
-
-	                		<p>Strengthening and accelerating the processes of genetic engineering, Synbiota makes rapid DNA prototyping possible. It puts researchers on a higher creative plane, where they can focus on trying many different hypotheses, instead of trying to get one hypothesis to work. Such freedom represents a new era of research and innovation where the power of synthetic biology can be exploited with extraordinary speed, ease, flexibility, and reliability. With Synbiota, virtual and material science are harmonized as genetic designs translate seamlessly from the computer to the petri dish.</p>
+	                		<p>By strengthening and accelerating the processes of genetic engineering, Synbiota makes rapid DNA prototyping possible. It puts researchers on a higher creative plane, where they can focus on trying many different hypotheses instead of trying to get one hypothesis to work. Such freedom represents a new era of research and innovation where the power of synthetic biology can be exploited with extraordinary speed, ease, flexibility, and reliability.</p>
+	                		<p>With Synbiota, virtual and material science are harmonized as genetic designs translate seamlessly from the computer to the petri dish.</p>
 	                	</div>
 	                </div>
 
