Resolved index merge conflict

--- a/index.html
+++ b/index.html
@@ -98,13 +98,8 @@
 						</div>
 						<div class="row">
 							<div class="col-md-4 col-md-offset-2">
-<<<<<<< Updated upstream
-								<h3>Design, Build Grow</h3>
+								<h3>Design, Build, Grow</h3>
 								<p>Synbiota&rsquo;s integrated suite of software and wetware solutions empowers you to create your own genetic constructs with unparalleled speed and reliability. <a href="build">How does it work?</a></p>
-=======
-								<h3>Design, Build &amp; Grow</h3>
-								<p>Synbiota&rsquo;s integrated suite of wetware and software solutions empowers you to create your own genetic constructs with unparalleled speed and reliability. <a href="/beta.html">Learn More!</a></p>
->>>>>>> Stashed changes
 							</div>
 							<div class="col-md-4">
 								<h3>RDP Standard</h3>
