--- a/platform.html
+++ b/platform.html
@@ -112,10 +112,10 @@
 
 	                <div class="row">
 	                	<div class="col-sm-4 col-sm-offset-2">
-	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="standard">Learn About RDP Standard</a></h5></button>
+	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="/standard.html">Learn About RDP Standard</a></h5></button>
 	                	</div>
 	                	<div class="col-sm-4">
-	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="build">Start Building Now</a></h5></button>
+	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="/beta.html">Start Building Now</a></h5></button>
 	                	</div>
 	            </div>
 
