--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 		<div class="container-fluid">
 			<header data-topper></header>
 
-
 			<section>
 
-			<div class="container">
+			    <div id="indexTout">
 					<div class="row">
 						<div class="col-md-4 col-md-offset-4">
 							<img src="img/arch-upper.png" class="img-responsive center-block">
@@ -62,7 +61,7 @@
                                 href="http://igg.me/at/DNATinkerStudio" 
                                 target="_blank"
                                 title="What will you build? pre-order now our DNA Tinker Studio on Indiegogo now!">
-    							
+
     							<h3 class="disable-margin-padding">What will you build?</h3>
     							<p>pre-order now our<br>
     							<strong>DNA Tinker Studio</strong><br>
@@ -81,7 +80,6 @@
 							<img src="img/arch-lower.png" class="img-responsive center-block">
 						</div>
 					</div>
-
 				</div>
 
 				<div class="row jumbotron dark-purple">
@@ -178,34 +176,11 @@
 					</div>
 				</div>
 			</section>
-			
-			<!-- Small modal -->
 
-            <div id="welcomeModal" class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-md">
-                <div class="modal-content text-center">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title" id="mySmallModalLabel">Keep in Touch</h4>
-                  </div>
-                  <div class="modal-body ">
-                    <p>Sign up for our newsletter for info on new products, exclusive offers, &amp; awesome project ideas.</p>
-                    <form>
-                      <input type="text" class="form-control" aria-label="...">
-                    </form>
-                    <button class="btn btn-primary btn-wide" type="button">Sign Up</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-
+            <!-- video modal -->
             <div id="videoModal" class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-md">
                 <div class="modal-content text-center">
-                  <!--<div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title" id="mySmallModalLabel">Watch our video:</h4>
-                  </div>-->
                   <div class="modal-body ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/c3PGZuS94YU" frameborder="0" allowfullscreen class="img-responsive hidden-xs hidden-sm" style="height:315px;"></iframe>
                   </div>
@@ -213,16 +188,20 @@
               </div>
             </div>
 
-            <!-- Small modal -->
-			<div id="myModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+            <!-- welcome modal -->
+			<div id="welcomeModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
 			  <div class="modal-dialog modal-sm">
 			    <div class="modal-content text-center">
-			    	<h2>Stay <span>in the Circuit</span></h2>
-			    	<p>Sign up for our newsletter to hear about new products, exclusive offers, and awesome projects.</p>
-			    	<div class="form-group">
-    					<input type="text" class="form-control" placeholder="your email">
-					</div>
-			      <button type="button" class="btn btn-wide purple-red-bg">Sign Up</button>
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Stay <span>in the Circuit</span></h2>
+                            <p>Sign up for our newsletter to hear about new products, exclusive offers, and awesome projects.</p>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="your email">
+                            </div>
+                            <p><button type="button" class="btn btn-wide purple-red-bg">Sign Up</button></p>
+                        </div>
+                    </div>
 			    </div>
 			  </div>
 			</div>
