Restyling homepage with gifs

--- a/index.html
+++ b/index.html
@@ -107,61 +107,64 @@
 					</div>
 				</div>
 
-				<div class="container">
+				<div class="container" id="productsGrid">
 					<div class="row">
 						<div class="col-xs-12 text-center">
 							<h2>Start Building</h2>
 						</div>
 						<div class="col-sm-4 col-sm-offset-2">
-							<div class="border">
-								<div class="row">
-									<div class="col-sm-6 col-sm-offset-3">
-										<img src="img/box-image.png" class="img-responsive center-block">
-									</div>
+							<div class="row">
+								<div class="col-sm-9 col-sm-offset-2">
+									<img src="/img/product_hello.gif" class="img-responsive center-block">
 								</div>
-								<img src="img/testtube-one.png" class="pull-left">
-								<h5>Beginner</h5>
-								<h4>RDP &ldquo;Hello World&rdquo;</h4>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+                                    <h5>Level: Beginner</h5>
+                                    <h4>RDP &ldquo;Hello World&rdquo;</h4>
+								</div>
 							</div>
 						</div>
 						<div class="col-sm-4 col-border">
-							<div class="border">
-								<div class="row">
-									<div class="col-sm-6 col-sm-offset-3">
-										<img src="img/box-image.png" class="img-responsive center-block">
-									</div>
+							<div class="row">
+								<div class="col-sm-9 col-sm-offset-2">
+									<img src="/img/product_rainbow.gif" class="img-responsive center-block">
 								</div>
-								<img src="img/testtube-one.png" class="pull-left">
-								<h5>Beginner</h5>
-								<h4>Rainbow Factory</h4>
 							</div>
-						</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+    								<h5>Beginner</h5>
+    								<h4>Rainbow Factory</h4>
+								</div>
+							</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-4 col-sm-offset-2">
-							<div class="border">
-								<div class="row">
-									<div class="col-sm-6 col-sm-offset-3">
-										<img src="img/box-image.png" class="img-responsive center-block">
-									</div>
+						<div class="col-sm-4 col-sm-offset-2 bottom-half">
+							<div class="row">
+								<div class="col-sm-9 col-sm-offset-2">
+									<img src="/img/product_violacein.gif" class="img-responsive center-block">
 								</div>
-								<img src="img/testtube-two.png" class="pull-left">
-								<h5>Intermediate</h5>
-								<h4>#ScienceHack<br>
-									Violacein Factory</h4>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+    								<h5>Intermediate</h5>
+    								<h4>#ScienceHack<br>
+    									Violacein Factory</h4>
+								</div>
 							</div>
 						</div>
-						<div class="col-sm-4 col-border">
-							<div class="border">
-								<div class="row">
-									<div class="col-sm-6 col-sm-offset-3">
-										<img src="img/box-image.png" class="img-responsive center-block">
-									</div>
+						<div class="col-sm-4 col-border bottom-half">
+							<div class="row">
+								<div class="col-sm-9 col-sm-offset-2">
+									<img src="/img/product_tinker.gif" class="img-responsive center-block">
 								</div>
-								<img src="img/testtube-three.png" class="pull-left">
-								<h5>Advanced</h5>
-								<h4>DNA Tinker<br>
-									Studio</h4>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+    								<h5>Advanced</h5>
+    								<h4>DNA Tinker<br>
+    									Studio</h4>
+								</div>
 							</div>
 						</div>
 					</div>
