Exposing indiegogo on small screens

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
 							<img src="img/arch-lower.png" class="img-responsive center-block">
 						</div>
 					</div>
+					<div class="col-md-12 hidden-md hidden-lg col-md-offset-1 sm-indiegogo text-center">
+						<a id="indiegogo" 
+                            href="http://igg.me/at/DNATinkerStudio" 
+                            target="_blank"
+                            title="What will you build? pre-order now our DNA Tinker Studio on Indiegogo now!">
+
+							<h3 class="disable-margin-padding">What will you build?</h3>
+							<p>pre-order now our<br>
+							<strong>DNA Tinker Studio</strong><br>
+							on <img src="img/indiegogo-logo.jpg" height="20px;" width="auto" alt="Indiegogo logo"> now!</p>
+						</a>
+						<button class="btn btn-primary" type="button" data-toggle="modal" data-target="#videoModal">Watch the video</button>
+					</div>
 				</div>
 
 				<div class="row jumbotron dark-purple">
